update to invalidate message after consumption