@@ -142,11 +142,13 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>9.0.3.v20130506</version>
                 <configuration>
+                    <jvmArgs>-XX:MaxPermSize=128m</jvmArgs>
                     <webAppConfig>
                         <contextPath>/${project.build.finalName}</contextPath>
                     </webAppConfig>
                     <!-- <jettyXml>src/test/resources/jetty.xml,src/test/resources/jetty-http.xml</jettyXml> -->
-
+                    <stopKey>blah</stopKey>
+                    <stopPort>6789</stopPort>
                 </configuration>
             </plugin>
 
